--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch server.js"
+    "start": "node server.js"
   },
   "author": "valdoth",
   "license": "ISC",
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.6",
-    "nodemon": "^2.0.19"
+    "mongoose": "^6.4.6"
   }
 }
